--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "private": true,
     "dependencies": {
         "autoprefixer": "7.1.6",
+        "axios": "^0.18.0",
         "babel-core": "6.26.0",
         "babel-eslint": "7.2.3",
         "babel-jest": "20.0.3",
@@ -41,6 +42,7 @@
         "react-dev-utils": "^5.0.1",
         "react-dom": "^16.4.1",
         "react-i18next": "7.7.0",
+        "react-loading": "^2.0.3",
         "react-router": "^4.3.1",
         "react-router-dom": "^4.3.1",
         "resolve": "1.6.0",
