--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "react-loading": "^2.0.3",
         "react-router": "^4.3.1",
         "react-router-dom": "^4.3.1",
+        "recompose": "^0.30.0",
         "resolve": "1.6.0",
         "sass-loader": "^7.1.0",
         "style-loader": "0.19.0",
